# sparsegray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  grayscale_mat.hpp  sgf_codec.hpp  test.sh
docs/: design.drawio
include/: bitrle.hpp  grayscale_mat.hpp  sgf_codec.hpp
test/: sparsegray_test.cpp
tests/: CMakeLists.txt  sparsegray_test.cpp
